2.1.3 - 2026-02-xx
==================

# Broker
- Fix MOSQ_EVT_DISCONNECT being called before MOSQ_EVT_ACL_CHECK for the will
  of that client. Closes #3487.
- Fix password length not being passed to MOSQ_EVT_BASIC_AUTH events.
  Closes #3490.
- Fix incorrect maximum-packet-size restriction. Closes #3503.
- Fix will messages being incorrectly delayed if a client set
  session-expiry-interval=0 when using will-delay-interval>0. Closes #3505.

# Common lib:
- Fix potential crash if reading a file in restricted mode and the group id
  does not have an entry in /etc/groups. Closes #3498.
- Fix missing SONAME. Closes #3483.

# Lib
- Fix mosquitto_loop_start() leaving the mosq struct in an invalid state if
  thread creation fails. Closes #3496.

# Plugins
- Fix migrate_to_persist_sqlite.py not base64 decoding message payloads when
  migrating. Closes #3492.

# Build:
- Fix test when nbuilding with WITH_EDITLINE=no. Closes #3484.
- Fix tests when building with WITH_WEBSOCKETS=no. Closes #3502.
- Fix libmosquitto_static cmake build.


2.1.2 - 2026-02-09
==================

# Broker
- Forbid running with `persistence true` and with a persistence plugin at the
  same time.

# Build
- Build fixes for OpenBSD. Closes #3474.
- Add missing libedit to docker builds. Closes #3476.
- Fix static/shared linking of libwebsockets under cmake.


2.1.1 - 2026-02-04
==================

# Broker

- Fix PUID/PGID checking for docker
- Add MOSQUITTO_UNSAFE_ALLOW_SYMLINKS environment variable to allow the
  restrictions on reading files through symlinks to be lifted in safe
  environments like kubernetes. Closes #3461.
- Fix inconsistent disconnect log message format, and add address:port.
- Fix `plugin`/`global_plugin` option not allowing space characters.
- Fix $SYS load values not being published initially. Closes #3459.
- Fix max_connections not being honoured on libwebsockets listeners. This does
  not affect the built-in websockets support. Closes #3455.